Correction d'un bug dans l'affichage des collapse-content de la page About. La totalité d'un texte peut maintenant être affichée sans coupure, même long.

--- a/src/styles/components/_collapse.scss
+++ b/src/styles/components/_collapse.scss
@@ -58,7 +58,7 @@
   }
   
   .collapse-content.open {
-    max-height: 200px;
+    max-height: 100%;
     opacity: 1;
     transform: translateY(0);
   }
